v2.0 issue with spacing/box generation

--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ html, body {
 	background: red;
 	color: white;
 	border: 1px solid black;
+	box-shadow: 0 0 50px #CCCCCC
 
 }
 #color{
@@ -81,7 +82,7 @@ html, body {
 	background: red;
 	color: white;
 	border: 1px solid black;
-	transition:
+	/*box-shadow: 0 0 50px #CCCCCC*/
 }
 
 
@@ -111,13 +112,15 @@ html, body {
 	box-shadow: 0 0 10px #808080;
 }
 #set_size input[type=text]:hover{
-	border: 1px outset #7bc1f7;
-	-moz-box-shadow: 0 0 10px #7bc1f7;
-	-webkit-box-shadow: 0 0 10px #7bc1f7;
-	box-shadow: 0 0 10px #7bc1f7;
+	border-color: #7bc1f7;
+	-moz-box-shadow: 0 0 50px #7bc1f7;
+	-webkit-box-shadow: 0 0 50px #7bc1f7;
+	box-shadow: 0 0 50px #7bc1f7;
 	border-radius:10px;
 }
-
+.glow:hover {
+		box-shadow: 0 0 50px #CCCCCC
+}
 
 
 
@@ -127,6 +130,7 @@ html, body {
 	z-index:1;
 	width:100%;
 	margin:auto;
+
 }
 .menu input[type=radio] {
 	color:black;
@@ -165,16 +169,19 @@ html, body {
 	width: 80%;
 	height: 80%;
 	margin: auto;
-	background:white;
+	background:#343434;
 	margin-top:3%;
 	border: 5px inset #9c9c9c;
 	border-radius: 25px;
 }
 .box{
-	clear:both;
+	display: inline-block;
 	float:left;
-	border: 1px dashed black;
+	background:#343434;
+	height: 26.75px;
+	width: 26.75px;
 }
+
 #left_button{
 	background:white;
 	border:10px outset white;
@@ -199,10 +206,28 @@ html, body {
 	position:absolute;
 	top: 512px;
 	left: 725px;
+	height:1px;
 }
 #sig p{
 	font-size: 30pt;
 	font-family:Brush Script MT, Monotype Corsiva, Edwardian Script IT, Freestyle Script, cursive;
 	color:#ffd700;
-	text-shadow:#ddb500 0 0 2px; 
+	text-shadow:#ddb500 0 0 20px; 
+}
+#grid {
+	background:#343434;
+	height:460px;
+	width:460px;
+	margin:auto;
+
+	z-index: -1;
+}
+.button {
+	border: 2px solid black;
+	background: #555555;
+	width: 55px;
+	margin: auto;
+	border-radius: 10px;
+	color: white;
+	padding: 5px;
 }
